# rusty-python

./: .gitignore  Cargo.toml  Makefile  README.md  setup.py
setuptools_rust_starter/: __init__.py  yourscript.py
src/: ahoc.rs  lib.rs  submodule.rs
tests/: test_setuptools_rust_starter.py
