[package]
authors = ["PyO3 Authors"]
name = "setuptools-rust-starter"
version = "0.1.0"
description = "An example project to get started using PyO3 with maturin"
edition = "2018"

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }


#[dependencies.pyo3]
# path = "../../"
# features = ["extension-module"]

[lib]
name = "setuptools_rust_starter"
crate-type = ["cdylib"]
