[package]
authors = ["PyO3 Authors"]
name = "setuptools-rust-starter"
version = "0.1.0"
description = "An example project to get started using PyO3 with maturin"
edition = "2018"

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }
# pyo3-asyncio = { version = "0.13", features = ["attributes", "async-std-runtime"] }
pyo3-asyncio = { git="https://github.com/awestlake87/pyo3-asyncio", branch="init-fixes", features = ["attributes", "async-std-runtime"] }
aho-corasick = "0.7"

async-std = "1.9"



[lib]
name = "setuptools_rust_starter"
crate-type = ["cdylib"]

